--- a/full-stack.html
+++ b/full-stack.html
@@ -38,8 +38,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/udemy/602998df-b175-4117-bb6e-f6067cc256d0'>Udemy - Software Engineer - Full Stack, Udemy for Business</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692357229-full-stack-software-engineer-php'>Bynder Full Stack Software Engineer - PHP | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/NexGenTechnologiesInc/743999692055129-java-developer-full-stack-pt-remote'>NexGen Technologies, Inc. Java Developer - Full Stack -  PT - Remote | SmartRecruiters</a></h5> 
@@ -58,7 +66,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://healthmetrix.join.com/jobs/260170-senior-fullstack-software-engineer-f-m-x'>Job @ Healthmetrix (Berlin): Senior Fullstack Soft... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://healthmetrix.join.com/jobs/260170-senior-fullstack-software-engineer-f-m-x'>Job @ Healthmetrix (Berlin): Senior Fullstack Soft... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -78,7 +86,7 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bootsnall.recruiterbox.com/jobs/fk0joha/'>
+<h5><a href='https://bootsnall.recruiterbox.com/jobs/fk0joha/'>
     Full-Stack Developer (Mid/Senior) at AirTreks
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NYNYC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -185,7 +193,7 @@ Idea People.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://hfarm.applytojob.com/apply/wPiCFvimUH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hfarm.applytojob.com/apply/wPiCFvimUH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -197,7 +205,7 @@ Idea People.</p>
 <p><span class="badge badge-light">London London, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/o6sEafw6'>Farfetch Careers - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/o6sEafw6'>Farfetch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -278,7 +286,7 @@ intelligence?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -321,7 +329,7 @@ Platform?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/improbable/ff8f17bb-f404-4073-877f-6b1ac8f0b47e'>Improbable - Lead Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/improbable/ff8f17bb-f404-4073-877f-6b1ac8f0b47e'>Improbable - Lead Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -357,7 +365,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
+<h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -365,12 +373,12 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opsramp.recruitee.com/o/fullstack-developer'>Full-stack Developer - OpsRamp, Inc.</a></h5> 
+<h5><a href='https://opsramp.recruitee.com/o/fullstack-developer'>Full-stack Developer - OpsRamp, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Research, architect and implement responsive, reusable, customizable next 
 generation web and mobile components and interfaces. Design and build a?...</p>
 <hr/>
-<h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -450,16 +458,8 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1789019'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1789019'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692249637-full-stack-software-developer-consultant-job-id-63689-'>Computer Consultants International, Inc. Full Stack Software Developer Consultant(Job ID:63689) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Salt Lake City, UT</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
